--- a/port.html
+++ b/port.html
@@ -60,7 +60,7 @@
           </div>
           <p>I contribute a distinct set of skills and insights to each project or cooperation. I am devoted and industrious, and I provide high-quality work on time. In addition to my technical knowledge, I am a strong communicator and team player, capable of collaborating with customers and colleagues to achieve common goals. Whether you need assistance with a single project or continuous support and direction, I am devoted to offering personalised solutions that match your individual requirements. I am convinced that my mix of technical expertise, strategic thinking, and interpersonal abilities will offer value to any cooperation.</p>
 
-          <a href="#link" target="blank">Download CV</a>
+          <a href="https://flowcv.com/resume/6o7c5qen5w" target="blank">Download CV</a>
         </div>
       </div>
     </div>
@@ -112,11 +112,11 @@
 
             <li class="project">Product Landing page</li>
 
-            <li class="project">Integtated Network Security Platform</li>
+            <li class="project">Quiz App</li>
 
-            <li class="project">Portfolio (HTML, CSS, js, Bootstraps)</li>
-            <li class="project">OpenCourse Website (HTML, CSS, Javascript, Python, SQL)</li>
-            <li class="project">Blog (HTML, CSS, Bootstraps)</li>
+            <li class="project"> Personal Portfolio (HTML, CSS, js, Bootstraps)</li>
+            <li class="project"> Music Player App(HTML, CSS, Javascript, Python, SQL)</li>
+            <li class="project"> Currently Working on(HTML, CSS, Bootstraps)</li>
 
             <li class="project">Currently Working on </li>
           </p>
@@ -188,16 +188,16 @@
         <div class="card">
           <div class="box">
             <img src="https://source.unsplash.com/720x600/?shopping" alt="">
-            <div class="text">Product Landing Page
+            <div class="text"><a href="https://qdy5ohppzepbfmyzgmphgq.on.drv.tw/www.Product-landing-page.com/pagelanding.html" > Product Landing Page </a>
             </div>
-            <p a>#Project Details:A landing page design with a minimal look will convert more visitors into customers. So, use a dedicated landing page layout to direct all the traffic from marketing campaigns.</p>
+            <p   >#Project Details:A landing page design with a minimal look will convert more visitors into customers. So, use a dedicated landing page layout to direct all the traffic from marketing campaigns.</p>
           </div>
         </div>
         <div class="card">
           <div class="box">
             <img src="https://source.unsplash.com/720x600/?portfolio" alt="">
-            <div class="text">
-               Quiz App
+            <div class="text"><a href="https://qdy5ohppzepbfmyzgmphgq.on.drv.tw/www.Quiz-app.com/quizApp.html">
+               Quiz App </a>
             </div>
             <p>#Project Details:Quiz is the method of answering to the questions that has been asked based on the general knowledge and so on.Quiz App is a collection of different quizzes likes technical, General knowledge, English Grammar, Quantitative Aptitude</p>
           </div>
@@ -205,15 +205,15 @@
         <div class="card">
           <div class="box">
             <img src="https://source.unsplash.com/720x600/?blog" alt="">
-            <div class="text">Portfolio</div>
+            <div class="text"> <a href="https://qdy5ohppzepbfmyzgmphgq.on.drv.tw/www.Personal-Portfolio.com/port.html"> Personal Portfolio  </a></div>
             <p>#Project Details:My portfolio web page, where I showcase my abilities and work. Made using HTML, CSS, and Javascript.</p>
           </div>
         </div>
         <div class="card">
           <div class="box">
             <img src="https://source.unsplash.com/720x600/?messanger" alt="">
-            <div class="text">Blog</div>
-            <p>#Project Details:- My personal blog and educational website where I share what I've learnt.</p>
+            <div class="text"><a href="https://qdy5ohppzepbfmyzgmphgq.on.drv.tw/www.musicplayerapp.com/music.html"> Music Player App</a> </div>
+            <p>#Project Details:- Music is the only language in which you cannot say a mean or sarcastic thing</p>
           </div>
         </div>
         <div class="card">
